--- a/src/components/FeedVideos/styles.module.css
+++ b/src/components/FeedVideos/styles.module.css
@@ -1,3 +1,5 @@
 .item {
-    scroll-snap-align: center;
+    height: 100%;
+    min-height: 100%;
+    scroll-snap-align: start;
 }
