--- a/src/components/NavBar/styles.module.css
+++ b/src/components/NavBar/styles.module.css
@@ -1,8 +1,10 @@
 .navbar {
+    background: #000;
     display: flex;
     flex-direction: row;
+    flex-shrink: 0;
     width: 100%;
-    height: 50px;
+    height: var(--nav-height);
     justify-content: space-around;
     align-items: center;
 }
@@ -64,6 +66,6 @@
 }
 
 .inboxTitle {
-    font-size: 8px;
+    font-size: 10px;
     transition: color 0.3s ease-in-out;
 }
