--- a/src/components/VideoPlayer/styles.module.css
+++ b/src/components/VideoPlayer/styles.module.css
@@ -4,6 +4,7 @@
 }
 
 .wrapper {
+    height: 100%;
     position: relative;
 }
 
